--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     </div>
                 </div>
                 <div class="col-md-9  wow fadeInRight animated">
-                    <form class="contact-form" action="">
+                    <form class="contact-form" action=""> <!-- inserir aqui o php com a action para envio do contato -->
                         <div class="row">
                             <div class="col-md-6">
                                 <input type="text" class="form-control" id="name" placeholder="Nome">
@@ -480,6 +480,16 @@
     <script src="js/wow.js"></script>
     <script src="js/script.js"></script>
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-41843022-6', 'auto');
+      ga('send', 'pageview');
+
+    </script>
 
 
 
